showing last comment when existing on homepage

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -11,5 +11,22 @@
     <% if place.user.present? %>
       <small><%= place.user.email %></small>
     <% end %>
+
+  <% if place.comments.present? %>
+    <div class="col-xs-12">
+      <blockquote>
+                    <% if place.comments.present? && place.comments.last.humanized_rating.present? %>
+                        <b><%= place.comments.last.humanized_rating %> </b>-
+                    <% end %>
+
+                    <% if place.comments.present?%>
+                        <%= place.comments.last.message %>
+                        <% if place.comments.last.user.present? %>
+                            <small><%= place.comments.last.user.email %></small>
+                        <% end %>
+                    <% end %>
+      </blockquote>
+    </div>
+  <% end %>
   </div>
 <% end %>
