--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -91,3 +91,9 @@ function initMap() {
     </blockquote>
   </div>
 <% end %>
+
+<div class="clear"></div>
+<%= simple_form_for @photo, url: '#' do |f| %>
+  <%= f.input :caption %>
+  <%= f.submit "Add a photo", class: 'btn btn-primary' %>
+<% end %>
