--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -95,5 +95,13 @@ function initMap() {
 <div class="clear"></div>
 <%= simple_form_for @photo, url: place_photos_path(@place) do |f| %>
   <%= f.input :caption %>
+  <%= f.input :avatar %>
   <%= f.submit "Add a photo", class: 'btn btn-primary' %>
+<% end %>
+
+<h1>Photos</h1>
+
+<% @place.photos.each do |photo| %>
+  <%= image_tag photo.avatar %>
+  <%= photo.caption %>
 <% end %>
