adding last image to index page

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -28,5 +28,13 @@
       </blockquote>
     </div>
   <% end %>
+
+  <% if place.photos.present? %>
+    <div class="col-xs-12 col-sm-6">
+        <%= place.photos.last.avatar %>
+        <small><%= place.photos.last.caption %></small>
+    </div>
+  <% end %>
+
   </div>
 <% end %>
