--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -29,3 +29,36 @@
     </blockquote>
   </div>
 <% end %>
+
+<div class="clear"></div>
+<br /><br />
+<h2 class="text-center">My Places</h2>
+<br /><br />
+
+<% @user.places.each do |place| %>
+  <div class="booyah-box col-xs-10 col-xs-offset-1">
+    <h1><%= link_to place.name, place_path(place) %></h1><br />
+    <i><%= place.address %></i><br /><br />
+    <p><%= place.description %></p><br />
+
+    <% if place.user.present? %>
+      <small><%= place.user.email %></small>
+    <% end %>
+
+  <% if place.comments.present? %>
+    <div class="col-xs-12">
+      <blockquote>
+                    <% if place.comments.present? && place.comments.last.humanized_rating.present? %>
+                        <b><%= place.comments.last.humanized_rating %> </b>-
+                    <% end %>
+
+                    <% if place.comments.present?%>
+                        <%= place.comments.last.message %>
+                        <% if place.comments.last.user.present? %>
+                            <small><%= place.comments.last.user.email %></small>
+                        <% end %>
+                    <% end %>
+      </blockquote>
+    </div>
+  <% end %>
+<% end %>
